test/1.2/errors/ENAMECOLL_dml14.dml
/*
  © 2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

bank b {
    register r4[_ < ...][_ < ...];
}
